--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,12 @@ pyarrow==0.16.0
 pytest==5.0.1
 pytest-cov==2.7.1
 s3fs==0.4.2
+boto3==1.21.14
+botocore==1.24.14
+dateutils==0.6.12
+numpy==1.21.5
+ordered-set==4.0.2
+pandas==1.3.5
+pyarrow==7.0.0
+s3fs==2022.2.0
+urllib3==1.26.8
