:sparkles: initial commit

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [sql]
-query_max_temp_by_location = ./sql/query_max_temp_by_location
-query_stats_by_by_day = ./sql/query_stats_by_by_day
+query_max_temp_by_location = ./src/sql/query_max_temp_by_location.sql
+query_stats_by_by_day = ./src/sql/query_stats_by_by_day.sql
 
 [json]
 locations = ./src/data/geo_loc.json
@@ -9,7 +9,9 @@ json_keyschema = ./src/data/key_schema.json
 json_provision = ./src/data/provisions.json
 
 [dev]
-table_landing = data-dev-landing-table
+table_landing = data-dev-landing-table-test
 refined_bucket = data-dev-refined
-API_KEY = 21017caa610452e3ad2f907948bbf323
+path_results_q1 = results/output_query_01
+path_results_q2 = results/output_query_02
+API_KEY = 93c2b3bff32e6cdaa8c312ee0808c0f4
 end_point = https://api.openweathermap.org/data/2.5/onecall/timemachine?lat=
