--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
 awscli
-boto3
-Click
-pandas==1.0.1
-pyarrow==0.16.0
+boto3==1.21.14
+click==8.0.4
+dateutils==0.6.12
 pytest==5.0.1
 pytest-cov==2.7.1
 s3fs==0.4.2
-boto3==1.21.14
 botocore==1.24.14
-dateutils==0.6.12
 numpy==1.21.5
 ordered-set==4.0.2
 pandas==1.3.5
-pyarrow==7.0.0
-s3fs==2022.2.0
 urllib3==1.26.8
+pyarrow==6.0.1
+awswrangler==2.14.0
+pandasql==0.7.3
+SQLAlchemy==1.4.32
