--- a/config.ini
+++ b/config.ini
@@ -13,5 +13,5 @@ table_landing = data-dev-landing-table-test
 refined_bucket = data-dev-refined
 path_results_q1 = results/output_query_01
 path_results_q2 = results/output_query_02
-API_KEY = 93c2b3bff32e6cdaa8c312ee0808c0f4
+API_KEY = test
 end_point = https://api.openweathermap.org/data/2.5/onecall/timemachine?lat=
